# codenames-interpretability

./: .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
codenames/: __main__.py  canon_cache.py  checkpoint.py  cli.py  comparison.py  depcheck.py  diagnostics.py  loop.py  persistence.py  sanity.py
codenames/models/: __init__.py  mistral.py  modernbert.py  qwen.py  qwen_random.py
codenames/viz/: __init__.py  embedding.py  heatmap.py  loader.py  metrics.py  pipeline.py  style.py
codenames_interpretability/: __init__.py  __main__.py  cli.py  contract.py  data.py  extraction.py  generation.py  loop.py  prompts.py  spans.py
codenames_interpretability/models/: bert.py  bert_random.py  mistral.py  qwen.py  t5.py
docs/: contract.md  figure_analysis.md  methodology.md  runtime.md  visualization.md
notebooks/: 00_validation.ipynb  01_mistral.ipynb  02_qwen.ipynb  03_qwen_random.ipynb  04_bert.ipynb  05_bert_random.ipynb  06_t5.ipynb  07_modernbert.ipynb
reference_notebooks/: BERT_Codenames_Layer_Extraction.ipynb  Mistral_Codenames_Layer_Extraction.ipynb  ModernBERT_Codenames_Layer_Extraction.ipynb  Qwen_Codenames_Layer_Extraction.ipynb  Random_Baseline_Codenames_Layer_Extraction.ipynb  Random_Qwen_Codenames_Layer_Extraction.ipynb  T5_Codenames_Layer_Extraction.ipynb
scripts/: build_analysis_layer.py  download_outputs.py
tests/: resume_harness.py  test_depcheck.py  test_metrics.py  test_notebooks.py  test_prompts.py  test_resume.py  test_spans.py
tests/fixtures/: resume_golden.json
