[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codenames-interpretability"
version = "1.0.0"
description = "Layer-wise word representation geometry across transformer architectures, evaluated on Codenames Duet"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TCC" }]
keywords = ["interpretability", "transformers", "geometric-analysis", "codenames"]

dependencies = [
    # Pin the full torch stack together: transformers transitively imports
    # torchvision on every model load, so a torchvision built against a
    # different torch crashes with "operator torchvision::nms does not exist".
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==4.48.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "scipy==1.14.1",
    "pyarrow==18.1.0",
    "accelerate==1.2.1",
]

[project.scripts]
codenames-experiment = "codenames.cli:main"

[tool.setuptools.packages.find]
include = ["codenames*"]
exclude = ["tests*", "notebooks*", "docs*"]
