[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codenames-interpretability"
version = "1.0.0"
description = "Layer-wise word representation geometry across transformer architectures, evaluated on Codenames Duet"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "TCC" }]
keywords = ["interpretability", "transformers", "geometric-analysis", "codenames"]

dependencies = [
    # Pin the full torch stack together: transformers transitively imports
    # torchvision on every model load, so a torchvision built against a
    # different torch crashes with "operator torchvision::nms does not exist".
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers==4.48.0",
    # numpy/pandas held to what Colab's own stack requires, so `pip install -e .`
    # doesn't fight google-colab (pins pandas==2.2.2) or numba (needs numpy<2.1).
    "numpy==2.0.2",
    "pandas==2.2.2",
    "tqdm==4.67.1",
    "scipy==1.14.1",
    "pyarrow==18.1.0",
    "accelerate==1.2.1",
]

[project.optional-dependencies]
# Local, post-hoc visualization only. NOT installed in Colab and NOT imported by
# the experiment run/doctor paths, so these are deliberately kept out of the core
# `dependencies` pin set (which is tuned to coexist with Colab's stack). Install
# locally with `pip install -e ".[viz]"`. Pinned for reproducible figures.
viz = [
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "scikit-learn==1.5.2",
    "umap-learn==0.5.7",
    "adjusttext==1.3.0",
]

[project.scripts]
codenames-experiment = "codenames.cli:main"

[tool.setuptools.packages.find]
include = ["codenames*"]
exclude = ["tests*", "notebooks*", "docs*"]
